[gd_scene load_steps=18 format=2]

[ext_resource path="res://Images/title.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Main.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Category.tscn" type="PackedScene" id=3]
[ext_resource path="res://Images/bg_pix.png" type="Texture" id=4]
[ext_resource path="res://Images/kofi12.png" type="Texture" id=5]
[ext_resource path="res://Images/blinky.png" type="Texture" id=6]
[ext_resource path="res://Fonts/VCR.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Images/SquareButton_White.png" type="Texture" id=8]
[ext_resource path="res://Images/SquareButton_White_Pressed.png" type="Texture" id=9]
[ext_resource path="res://Scenes/CreditsDialog.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/HelpDialog.tscn" type="PackedScene" id=11]
[ext_resource path="res://Images/discord_icon.png" type="Texture" id=12]
[ext_resource path="res://Images/Characters/1.png" type="Texture" id=13]

[sub_resource type="DynamicFont" id=3]
size = 50
outline_size = 7
outline_color = Color( 0.364706, 0.364706, 0.364706, 1 )
font_data = ExtResource( 7 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[sub_resource type="DynamicFont" id=1]
size = 80
outline_size = 7
outline_color = Color( 0.364706, 0.364706, 0.364706, 1 )
font_data = ExtResource( 7 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.972549, 0.972549, 0.941176, 1 )

[node name="BackgroundTexture" type="TextureRect" parent="."]
self_modulate = Color( 1, 1, 1, 0.517647 )
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -539.0
margin_bottom = -947.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 4 )
expand = true
stretch_mode = 2

[node name="Logo" type="TextureRect" parent="."]
margin_top = 65.0
margin_right = 1080.0
margin_bottom = 365.0
texture = ExtResource( 1 )
stretch_mode = 6

[node name="CoffeeButton" type="TextureButton" parent="."]
margin_left = 103.0
margin_top = 362.0
margin_right = 820.0
margin_bottom = 478.0
rect_min_size = Vector2( 0, 100 )
rect_scale = Vector2( 1.2, 1.2 )
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 3

[node name="Character" type="Control" parent="."]
margin_left = 168.0
margin_top = 423.0
margin_right = 913.0
margin_bottom = 837.0

[node name="HBoxContainer" type="HBoxContainer" parent="Character"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -366.5
margin_top = -61.0
margin_right = 367.5
margin_bottom = 142.0
alignment = 1

[node name="Icon" type="TextureRect" parent="Character/HBoxContainer"]
unique_name_in_owner = true
margin_left = 64.0
margin_right = 264.0
margin_bottom = 203.0
rect_min_size = Vector2( 200, 200 )
texture = ExtResource( 13 )
expand = true
stretch_mode = 6

[node name="Margin" type="MarginContainer" parent="Character/HBoxContainer"]
margin_left = 268.0
margin_right = 288.0
margin_bottom = 203.0
rect_min_size = Vector2( 20, 0 )

[node name="Label" type="Label" parent="Character/HBoxContainer"]
unique_name_in_owner = true
margin_left = 292.0
margin_top = 79.0
margin_right = 669.0
margin_bottom = 123.0
theme = SubResource( 4 )
text = "Shimagurutchi"

[node name="CharacterButton" type="TextureButton" parent="Character"]
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -516.5
margin_top = -62.0
margin_right = 500.5
margin_bottom = 163.0
rect_pivot_offset = Vector2( 27.8265, 9.0102 )

[node name="NinePatchRect" type="NinePatchRect" parent="Character/CharacterButton"]
self_modulate = Color( 0.550919, 0.972656, 0.907144, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -52.5
margin_top = -16.5
margin_right = 52.5
margin_bottom = 16.5
rect_scale = Vector2( 8, 8 )
rect_pivot_offset = Vector2( 50.375, 17.25 )
texture = ExtResource( 8 )
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -542.0
margin_top = 860.0
margin_right = 542.0
margin_bottom = 1660.0

[node name="Categories" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 540.0
margin_bottom = 800.0
rect_min_size = Vector2( 540, 540 )
custom_constants/separation = 75

[node name="Favourites" parent="HBoxContainer/Categories" instance=ExtResource( 3 )]
unique_name_in_owner = true
anchor_right = 0.0
margin_right = 540.0
margin_bottom = 100.0

[node name="Category1" parent="HBoxContainer/Categories" instance=ExtResource( 3 )]
unique_name_in_owner = true
anchor_right = 0.0
margin_top = 175.0
margin_right = 540.0
margin_bottom = 275.0

[node name="Category2" parent="HBoxContainer/Categories" instance=ExtResource( 3 )]
unique_name_in_owner = true
anchor_right = 0.0
margin_top = 350.0
margin_right = 540.0
margin_bottom = 450.0

[node name="Category3" parent="HBoxContainer/Categories" instance=ExtResource( 3 )]
unique_name_in_owner = true
anchor_right = 0.0
margin_top = 525.0
margin_right = 540.0
margin_bottom = 625.0

[node name="Category4" parent="HBoxContainer/Categories" instance=ExtResource( 3 )]
unique_name_in_owner = true
anchor_right = 0.0
margin_top = 700.0
margin_right = 540.0
margin_bottom = 800.0

[node name="Categories2" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 544.0
margin_right = 1084.0
margin_bottom = 800.0
rect_min_size = Vector2( 540, 540 )
custom_constants/separation = 75

[node name="Dislikes" parent="HBoxContainer/Categories2" instance=ExtResource( 3 )]
unique_name_in_owner = true
anchor_right = 0.0
margin_right = 540.0
margin_bottom = 100.0

[node name="Category5" parent="HBoxContainer/Categories2" instance=ExtResource( 3 )]
unique_name_in_owner = true
anchor_right = 0.0
margin_top = 175.0
margin_right = 540.0
margin_bottom = 275.0

[node name="Category6" parent="HBoxContainer/Categories2" instance=ExtResource( 3 )]
unique_name_in_owner = true
anchor_right = 0.0
margin_top = 350.0
margin_right = 540.0
margin_bottom = 450.0

[node name="Category7" parent="HBoxContainer/Categories2" instance=ExtResource( 3 )]
unique_name_in_owner = true
anchor_right = 0.0
margin_top = 525.0
margin_right = 540.0
margin_bottom = 625.0

[node name="Category8" parent="HBoxContainer/Categories2" instance=ExtResource( 3 )]
unique_name_in_owner = true
anchor_right = 0.0
margin_top = 700.0
margin_right = 540.0
margin_bottom = 800.0

[node name="Blinky" type="TextureRect" parent="."]
margin_left = 52.0001
margin_top = 179.0
margin_right = 262.0
margin_bottom = 389.0
rect_rotation = 42.4
texture = ExtResource( 6 )

[node name="HelpDialog" parent="." instance=ExtResource( 11 )]
visible = false

[node name="CreditsDialog" parent="." instance=ExtResource( 10 )]
visible = false

[node name="Footer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -540.0
margin_top = -200.0
margin_right = 540.0
rect_min_size = Vector2( 0, 200 )
alignment = 1

[node name="Credits" type="Control" parent="Footer"]
margin_left = 236.0
margin_right = 436.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 100 )

[node name="CreditsButton" type="TextureButton" parent="Footer/Credits"]
self_modulate = Color( 1, 0.588235, 0.839216, 1 )
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -7.5
margin_top = -8.5
margin_right = 7.5
margin_bottom = 8.5
rect_scale = Vector2( 8, 7.5 )
rect_pivot_offset = Vector2( 7.5, 8 )
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )

[node name="Label" type="Label" parent="Footer/Credits"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -23.5
margin_top = -40.5
margin_right = 23.5
margin_bottom = 30.5
theme = SubResource( 2 )
text = "-"

[node name="Discord" type="Control" parent="Footer"]
margin_left = 440.0
margin_right = 640.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 100 )

[node name="DiscordButton" type="TextureButton" parent="Footer/Discord"]
self_modulate = Color( 0.588235, 0.756863, 1, 1 )
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -7.5
margin_top = -8.5
margin_right = 7.5
margin_bottom = 8.5
rect_scale = Vector2( 8, 7.5 )
rect_pivot_offset = Vector2( 7.5, 8 )
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )

[node name="DiscordLogo" type="TextureRect" parent="Footer/Discord/DiscordButton"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -5.5
margin_top = -6.43335
margin_right = 67.5
margin_bottom = 68.5667
rect_scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 12 )
stretch_mode = 6

[node name="Help" type="Control" parent="Footer"]
margin_left = 644.0
margin_right = 844.0
margin_bottom = 200.0
rect_min_size = Vector2( 200, 100 )

[node name="HelpButton" type="TextureButton" parent="Footer/Help"]
self_modulate = Color( 1, 0.588235, 0.839216, 1 )
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -7.5
margin_top = -8.5
margin_right = 7.5
margin_bottom = 8.5
rect_scale = Vector2( 8, 7.5 )
rect_pivot_offset = Vector2( 7.5, 8 )
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 9 )

[node name="Label" type="Label" parent="Footer/Help"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -23.5
margin_top = -39.5
margin_right = 23.5
margin_bottom = 31.5
theme = SubResource( 2 )
text = "?"

[connection signal="pressed" from="CoffeeButton" to="." method="_on_CoffeeButton_pressed"]
[connection signal="pressed" from="Character/CharacterButton" to="." method="_on_CharacterButton_pressed"]
[connection signal="pressed" from="Footer/Credits/CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="pressed" from="Footer/Discord/DiscordButton" to="." method="_on_DiscordButton_pressed"]
[connection signal="pressed" from="Footer/Help/HelpButton" to="." method="_on_HelpButton_pressed"]
